--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vexilla/client",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A client for the Vexilla feature flag system",
   "main": "dist/client.js",
   "scripts": {
@@ -19,7 +19,9 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "@types/node": "^14.14.13",
+    "axios": "^0.21.0",
+    "uuid": "^8.3.2"
   },
   "files": [
     "dist/**/*"
